--- a/fuszer.css
+++ b/fuszer.css
@@ -18,7 +18,7 @@ ul{
 body{
     text-align: justify;
     padding: 50px;
-    background-color: rgba(255, 220, 182);
+    background-color: rgba(243, 224, 209);
 }
 p{
     padding: 5px;
@@ -28,12 +28,31 @@ p{
 img{
     float: right;
     border-radius: 10px;
-    max-width: 50%;
     height: auto;
     margin: 20px;
 }
 
-#balra
+.balra
 {
     float: left;
+    transform: scaleX(-1);
+}
+#kisebb{
+    max-width: 300px;
+}
+span{
+    font-weight: bold;
+    text-transform: uppercase;
+}
+h1{
+    letter-spacing: 5px;
+    text-align: center;
+    text-shadow: 0 0 3px #ff0000;
+    padding: 60px;
+}
+h2{
+    text-shadow: 0 0 3px #df980a
+}
+#kozep{
+    text-align: center;
 }
